# gestion_universidad

./: .env_example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py
app/config/: config.py
app/mapping/: __init__.py  area_mapping.py  especialidad_mapping.py  facultad_mapping.py  plan_materia_bulk.py  tipo_especialidad_mapping.py  universidad_mapping.py
app/models/: __init__.py  area.py  autoridad.py  especialidad.py  facultad.py  nota.py  universidad.py
app/repositories/: __init__.py  especialidad_repository.py  facultad_repository.py  universidad_repository.py
app/resources/: __init__.py  area_resource.py  autoridad_resource.py  cargo_resource.py  categoria_cargo_resource.py  departamento_resource.py  especialidad_resource.py  facultad_resource.py  grado_resource.py  grupo_resource.py  materia_resource.py  orientacion_resource.py  plan_resources.py  tipo_dedicacion_resource.py  tipo_especialidad_resource.py  universidad_resource.py
app/services/: __init__.py  especilidad_service.py  facultad_service.py  universidad_service.py
app/utils/: retry.py
docker/: .env_example  curl  docker-compose.yml
test/: test_especialidad.py  test_resource_especialidad.py  test_resource_facultad.py  test_resource_universidad.py  test_service_facultad.py  test_universidad.py
